# bev_multimae

./: .gitignore  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: linting.yaml  tests.yaml
.venv_zoe/: pyvenv.cfg
configs/: data_config.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
outputs/2026-02-26/15-07-32/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-26/15-07-53/.hydra/: hydra.yaml
outputs/2026-02-26/15-07-59/.hydra/: hydra.yaml
outputs/2026-02-26/15-08-14/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-26/15-08-52/.hydra/: hydra.yaml
outputs/2026-02-26/15-12-20/.hydra/: hydra.yaml
outputs/2026-02-26/15-12-26/.hydra/: hydra.yaml
outputs/2026-02-26/15-12-59/.hydra/: hydra.yaml
outputs/2026-02-26/15-14-03/.hydra/: hydra.yaml
outputs/2026-02-26/15-14-22/.hydra/: hydra.yaml
outputs/2026-02-26/16-05-14/.hydra/: hydra.yaml
outputs/2026-02-26/16-17-42/.hydra/: hydra.yaml
outputs/2026-02-26/16-24-34/.hydra/: hydra.yaml
outputs/2026-02-26/16-29-47/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-27/12-02-58/.hydra/: hydra.yaml
outputs/2026-02-27/12-08-56/.hydra/: hydra.yaml
outputs/2026-02-27/12-17-51/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-27/12-18-58/.hydra/: hydra.yaml
outputs/2026-02-27/12-49-18/.hydra/: hydra.yaml
outputs/2026-02-27/12-49-40/.hydra/: hydra.yaml
outputs/2026-02-27/13-30-46/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-27/13-34-06/.hydra/: hydra.yaml
outputs/2026-02-27/13-39-02/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-27/13-39-44/.hydra/: hydra.yaml
outputs/2026-02-27/13-40-47/.hydra/: hydra.yaml
outputs/2026-02-27/13-41-23/.hydra/: hydra.yaml
outputs/2026-02-27/13-42-08/.hydra/: hydra.yaml
outputs/2026-02-27/14-17-37/.hydra/: hydra.yaml
outputs/2026-02-27/14-19-05/.hydra/: hydra.yaml
outputs/2026-02-27/14-22-38/.hydra/: hydra.yaml
outputs/2026-02-27/14-26-42/.hydra/: hydra.yaml
outputs/2026-02-27/14-30-23/.hydra/: hydra.yaml
outputs/2026-02-27/14-33-11/.hydra/: hydra.yaml
outputs/2026-02-27/14-38-43/.hydra/: hydra.yaml
outputs/2026-02-27/14-42-08/.hydra/: hydra.yaml
outputs/2026-02-27/14-43-59/.hydra/: hydra.yaml
outputs/2026-02-27/14-45-01/.hydra/: hydra.yaml
outputs/2026-02-27/14-45-42/.hydra/: hydra.yaml
outputs/2026-02-27/14-46-39/.hydra/: hydra.yaml
outputs/2026-02-27/14-49-18/.hydra/: hydra.yaml
outputs/2026-02-27/14-55-03/.hydra/: hydra.yaml
outputs/2026-02-27/14-56-04/.hydra/: hydra.yaml
outputs/2026-02-27/14-58-14/.hydra/: hydra.yaml
outputs/2026-02-27/15-00-23/.hydra/: hydra.yaml
outputs/2026-02-27/15-16-55/.hydra/: hydra.yaml
outputs/2026-02-27/15-37-07/.hydra/: hydra.yaml
outputs/2026-02-27/15-37-42/.hydra/: hydra.yaml
outputs/2026-02-27/15-38-59/.hydra/: hydra.yaml
outputs/2026-02-27/15-49-53/.hydra/: hydra.yaml
outputs/2026-02-27/15-50-43/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-27/15-51-56/.hydra/: hydra.yaml
outputs/2026-02-27/15-53-13/.hydra/: hydra.yaml
outputs/2026-02-27/16-05-22/.hydra/: hydra.yaml
outputs/2026-03-02/15-30-25/.hydra/: hydra.yaml
outputs/2026-03-02/15-33-59/.hydra/: hydra.yaml
outputs/2026-03-02/15-34-57/.hydra/: hydra.yaml
outputs/2026-03-02/15-35-50/.hydra/: hydra.yaml
outputs/2026-03-02/20-27-33/.hydra/: hydra.yaml
outputs/2026-03-02/20-29-39/.hydra/: hydra.yaml
outputs/2026-03-03/10-22-18/.hydra/: hydra.yaml
outputs/2026-03-03/10-36-53/.hydra/: hydra.yaml
outputs/2026-03-03/11-18-23/.hydra/: hydra.yaml
outputs/2026-03-03/11-23-22/.hydra/: hydra.yaml
outputs/2026-03-03/13-47-35/.hydra/: hydra.yaml
outputs/2026-03-03/13-48-50/.hydra/: hydra.yaml
reports/figures/point_clouds/: radar_points.ply
src/bev_multimae/: train.py
src/bev_multimae/datasets/: camera.py  paired.py  radar.py
src/bev_multimae/engines/: evaluate.py  finetune.py  inference.py  pretrain.py
src/bev_multimae/multimae/: encoder.py  model.py
src/bev_multimae/preprocessing/: dynamic_pillar.py  mcap_reader.py
src/bev_multimae/visualization/: camera_points_viz.py  depth_visualization.py  radar_point_cloud.py
tests/: test_data.py
(+312 files in other folders)
